.metadata/.plugins/org.eclipse.cdt.ui/global-build.log

**** Rebuild of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o Effect\BrightnessContrastEffect.o ..\Effect\BrightnessContrastEffect.cpp
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o Effect\IteratePixelEffect.o ..\Effect\IteratePixelEffect.cpp
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o Effect\ImageEffect.o ..\Effect\ImageEffect.cpp
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o Effect\ScanLineEffect.o ..\Effect\ScanLineEffect.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 20834  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o Effect\SelectColorEffect.o ..\Effect\SelectColorEffect.cpp
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 13860  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 5929  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 5867  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
..\ObjectTracker.cpp: In function 'int main()':
..\ObjectTracker.cpp:33:52: error: conversion from 'SelectColorEffect*' to non-scalar type 'SelectColorEffect' requested
  SelectColorEffect effect1 = new SelectColorEffect();
                                                    ^
Build error occurred, build is stopped
Time consumed: 3489  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
ObjectTracker.o: In function `main':
E:\techStuff\KSCV-Pre\VisionTrackerCPP\Debug/../ObjectTracker.cpp:34: undefined reference to `SelectColorEffect::setTargetColor(int, cv::Scalar_<double>, cv::Scalar_<double>)'
collect2.exe: error: ld returned 1 exit status
Build error occurred, build is stopped
Time consumed: 7446  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o Effect\SelectColorEffect.o ..\Effect\SelectColorEffect.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 12176  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 9884  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 7721  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 6352  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
g++ -IE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\include -O0 -g3 -Wall -c -fmessage-length=0 -o ObjectTracker.o ..\ObjectTracker.cpp
g++ -LE:\techStuff\KSCV-Pre\VisionTrackerCPP\opencv\lib -o VisionTrackerCPP.exe ObjectTracker.o Effect\SelectColorEffect.o Effect\ScanLineEffect.o Effect\IteratePixelEffect.o Effect\ImageEffect.o Effect\BrightnessContrastEffect.o -lopencv_core249.dll -lopencv_imgproc249.dll -lopencv_highgui249.dll
Build complete for project VisionTrackerCPP
Time consumed: 6097  ms.  

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP

**** Build of configuration Debug for project VisionTrackerCPP ****

**** Internal Builder is used for build               ****
Nothing to build for VisionTrackerCPP
